apps/ocis/ocis/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis
  namespace: ocis
  labels:
    app.kubernetes.io/component: ocis
    app.kubernetes.io/name: ocis
    app.kubernetes.io/instance: ocis
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: ocis
      app.kubernetes.io/name: ocis
      app.kubernetes.io/instance: ocis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ocis
        app.kubernetes.io/name: ocis
        app.kubernetes.io/instance: ocis
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ocis
          image: owncloud/ocis:8.2.1
          command: ["/bin/sh", "-c", "ocis init || true; exec ocis server"]
          ports:
            - name: http
              containerPort: 9200
            - name: metrics
              containerPort: 9205
          volumeMounts:
            - name: etc
              mountPath: /etc/ocis
            - name: csp
              mountPath: /etc/ocis/csp.yaml
              subPath: csp.yaml
            - name: apps
              mountPath: /var/lib/ocis/web/assets/apps
            - name: data
              mountPath: /var/lib/ocis
      volumes:
        - name: etc
          persistentVolumeClaim:
            claimName: ocis-etc
        - name: csp
          configMap:
            name: ocis-csp
        - name: apps
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: ocis-data
