apps/ocis/ocis/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ocis
  namespace: ocis
  labels:
    app.kubernetes.io/component: ocis
    app.kubernetes.io/name: ocis
    app.kubernetes.io/instance: ocis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: ocis
    app.kubernetes.io/name: ocis
    app.kubernetes.io/instance: ocis
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
