apps/ocis/ocis/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ocis
  namespace: ocis
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: ocis
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ocis
          port: 9200
